--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.html
@@ -449,6 +449,9 @@
                         <h3 class="section1-carousels__slides--info_header">Refresh your home with essentials</h3>
                     </div>
                 </div>
+                <!-- side buttons -->
+                <button class="section1-carousels-right">◄</button>
+                <button class="section1-carousels-left">►</button>
             </div>
             <!-- carousels radio buttons -->
             <div class="section1-radios">
@@ -456,9 +459,6 @@
                 <input type="radio" id="section1-radios" name="section1-radios" class="section1-radios__dots">
                 <input type="radio" id="section1-radios" name="section1-radios" class="section1-radios__dots">
             </div>
-            <!-- side buttons -->
-            <button class="section1-right">◄</button>
-            <button class="section1-left">►</button>
         </section>
         <!-- •| #(SECTION 1 - CATEGORIES) end |◄◄◄◄◄◄◄◄◄◄ -->
         <!-- ◄◄|==========|==========|==========|==========|==========|==========|►► -->
