update for project Ploranza

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-faq.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-faq.html
@@ -180,10 +180,10 @@
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
                         <div class="nav__dropdown--images_top">
-                            <img src="." alt="cover-woman-1" class="nav__dropdown--images_top-img">
+                            <img src="./Ploranza-assets/navbar-images/1034371_1920x1080.jpg" alt="cover-woman-1" class="nav__dropdown--images_top-img">
                         </div>
                         <div class="nav__dropdown--images_bottom">
-                            <img src="." alt="cover-woman-1" class="nav__dropdown--images_bottom-img">
+                            <img src="./Ploranza-assets/navbar-images/Model-Chic-Fashion.jpg" alt="cover-woman-1" class="nav__dropdown--images_bottom-img">
                         </div>
                     </div>
                 </div>
@@ -226,8 +226,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-man-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-man-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/featured6.jpg" alt="cover-man-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/5860476b8307f642770fdf25871615ba.jpg" alt="cover-man-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of kid menu -->
@@ -252,12 +252,12 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-kid-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-kid-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/koton_cocuk.jpg" alt="cover-kid-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/shutterstock_391384774-scaled.jpg" alt="cover-kid-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of accessories menu -->
-                <div class="nav__dropdown accessories">
+                <div class="nav__dropdown accessories">/Ploranza-assets/navbar-images
                     <!-- container of unordered lists -->
                     <div class="nav__dropdown--categories">
                         <ul class="nav__dropdown--categories_columns">
@@ -283,8 +283,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-accessories-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-accessories-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/gsmarena_001.jpg" alt="cover-accessories-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/file-20180803-41369-1cdqpnb.avif" alt="cover-accessories-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of electronics menu -->
@@ -325,8 +325,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-electronics-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-electronics-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/http___prod-upp-image-read.ft.avif" alt="cover-electronics-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/ideapad-yoga-11-08_wb6q.jpg" alt="cover-electronics-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of sport menu -->
@@ -348,8 +348,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-sport-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-sport-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/CF+Philly+1659+Combined4.jpg" alt="cover-sport-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/61fc80f76da60e4a4a78510196983d4f.jpg" alt="cover-sport-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of furniture menu -->
@@ -377,8 +377,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-furniture-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-furniture-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/furniture.jpg" alt="cover-furniture-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/furniture-interior-modern-couch-living-room-4g3G.jpg" alt="cover-furniture-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
                 <!-- dropdown of software menu -->
@@ -405,8 +405,8 @@
                     </div>
                     <!-- container of images -->
                     <div class="nav__dropdown--images">
-                        <img src="." alt="cover-software-1" class="nav__dropdown--images_top">
-                        <img src="." alt="cover-software-2" class="nav__dropdown--images_bottom">
+                        <img src="./Ploranza-assets/navbar-images/359710-blackangel_2048x1152.jpg" alt="cover-software-1" class="nav__dropdown--images_top">
+                        <img src="./Ploranza-assets/navbar-images/24b7593d77f1bec7d3ab7c385cc3d13e.jpg" alt="cover-software-2" class="nav__dropdown--images_bottom">
                     </div>
                 </div>
             </div>
@@ -527,17 +527,17 @@
                             About Us</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="career">
+                        <a class="career">
                             <i class="fa-solid fa-laptop-code fa-1x"></i>
                             Career</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="contact">
+                        <a class="contact">
                             <i class="fa-solid fa-headset fa-1x"></i>
                             Contact</a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="sellinpol">
+                        <a class="sellinpol">
                             <i class="fa-solid fa-hand-holding-dollar fa-1x"></i>
                             Sell in Ploranza</a>
                     </li>
@@ -589,13 +589,13 @@
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="livechat">
+                        <a class="livechat">
                             <i class="fa-brands fa-rocketchat fa-1x"></i>
                             Live chat
                         </a>
                     </li>
                     <li class="footer__columns--lists">
-                        <a href="#" class="returnpolicy">
+                        <a class="returnpolicy">
                             <i class="fa-solid fa-shield-halved fa-1x"></i>
                             Return policy
                         </a>
@@ -607,9 +607,9 @@
                     ©2023 CODERS Denmark Corps. All Rights Reserved.
                 </p>
                 <span class="bottom__conditions">
-                    <a href="#" class="privbutton">Privacy Policy</a>
-                    <a href="#" class="termsbutton">Terms & Conditions</a>
-                    <a href="#" class="tuse">Terms of Use</a>
+                    <a class="privbutton">Privacy Policy</a>
+                    <a class="termsbutton">Terms & Conditions</a>
+                    <a class="tuse">Terms of Use</a>
                 </span>
             </div>
         </footer>
