some changes and fixes on project Ploranza (e-commerce)

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-faq.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-faq.html
@@ -481,7 +481,7 @@
                     <p class="faq__aandq--answers">Yes, Ploranza offers international shipping to select countries. Please 
                     check our website for a list of eligible countries and shipping rates.</p>
                 </p>
-                <a href="#" class="faq__trouble">
+                <a class="faq__trouble">
                     If you have a different issue, click to submit a ticket. <!-- unavailable feature -->
                 </a>
             </div>
