--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-locations.html
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza-locations.html
@@ -457,10 +457,12 @@
                         Thank you for choosing Ploranza as your go-to destination for quality products 
                     and exceptional service. We look forward to serving you both in-store and online.
                 </p>
-                <div class="locations__map">
-                    <img src="." alt="location-image" class="locations__map--image">
-                    <i class="fa-solid fa-location-dot fa-1x locations__map--mark">
-                </div>
+                <a href="https://maps.google.com/">
+                    <div class="locations__map">
+                        <img src="./Ploranza-assets/ploranza-images/location.png" alt="location-image" class="locations__map--image">
+                        <!-- <i class="fa-solid fa-location-dot fa-1x locations__map--mark"> -->
+                    </div>
+                </a>
             </div>
         </section>
         <!-- •| #(LOCATIONS) end |◄◄◄◄◄◄◄◄◄◄ -->
