--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
                 <button class="index__button">
                     <a href="#">EMPTY SLOT</a>
                 </button>
+                <button class="index__button">
+                    <a href="./04 ■► React/CODERS Denmark/starter-react/public/index.html">React FIGMA 1</a>
+                </button>
+                <button class="index__button">
+                    <a href="#">EMPTY SLOT</a>
+                </button>
             </div>
         </section>
     </body>
